Added doc target to makefiles for building documentation via doxygen; Made GSL an optional package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,7 @@ IF( Boost_FOUND )
 ENDIF( Boost_FOUND )
 LIST( APPEND COMMON_LIBRARIES ${Boost_LIBRARIES} )
 
-FIND_PACKAGE( GSL REQUIRED )
+FIND_PACKAGE( GSL )
 IF( GSL_FOUND )
     MESSAGE( STATUS "GSL Library: " ${GSL_LIBRARIES} )
 ENDIF( GSL_FOUND )
@@ -139,6 +139,16 @@ ENDIF()
 #CONFIGURE_FILE( ${${PROJECT_NAME}_INCLUDE_DIR}/cchmc/config.hpp.in ${${PROJECT_NAME}_INCLUDE_DIR}/cchmc/config.hpp)
 
 #CONFIGURE_FILE( ${${PROJECT_NAME}_UNITTEST_DIR}/test_main.cpp.in ${${PROJECT_NAME}_UNITTEST_DIR}/test_main.cpp )
+
+FIND_PACKAGE(Doxygen)
+IF(DOXYGEN_FOUND)
+CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/docs/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/docs/Doxyfile @ONLY)
+ADD_CUSTOM_TARGET(doc
+${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/docs/Doxyfile
+WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/docs
+COMMENT "Generating API documentation with Doxygen" VERBATIM
+)
+ENDIF(DOXYGEN_FOUND)
 
 set(CMAKE_CXX_FLAGS "-g -fPIC -Wall -O3 -std=c++0x -march=native -pedantic" )
 
