Changed library name

--- a/unittest/powerset/CMakeLists.txt
+++ b/unittest/powerset/CMakeLists.txt
@@ -3,4 +3,4 @@ INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_INCLUDE_DIR} )
 LIST(APPEND POWERSET_SRCS powerset_test.cpp )
 LIST(APPEND POWERSET_SRCS powerset_test2.cpp )
 
-ADD_LIBRARY(powerset SHARED ${POWERSET_SRCS} )
+ADD_LIBRARY(${PROJECT_NAME}_powerset_test SHARED ${POWERSET_SRCS} )
