Re-enabled the compilation of the examples directory

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 LIST(APPEND DIRS clotho)
-#LIST(APPEND DIRS examples)
+LIST(APPEND DIRS examples)
 #LIST(APPEND DIRS tools)
 
 FOREACH( D ${DIRS} )
