Created a shared library for the command line and simulation_config objects. In an attempt to improve compilation times

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -5,9 +5,11 @@ LIST( APPEND SRCS common_commandline.cpp )
 LIST( APPEND SRCS simulation_config_json.cpp )
 LIST( APPEND SRCS simulation_config.cpp )
 
-ADD_EXECUTABLE( benchmark_all_neutral benchmark.cpp ${SRCS} )
-SET_TARGET_PROPERTIES(benchmark_all_neutral PROPERTIES COMPILE_DEFINITIONS "ALL_NEUTRAL_OPTIMIZATION")
-TARGET_LINK_LIBRARIES(benchmark_all_neutral ${COMMON_LIBRARIES} ${PROJECT_NAME}_utility)
+ADD_LIBRARY( ${PROJECT_NAME}_commandline SHARED ${SRCS} )
 
-ADD_EXECUTABLE( benchmark_selected benchmark.cpp ${SRCS} )
-TARGET_LINK_LIBRARIES(benchmark_selected ${COMMON_LIBRARIES} ${PROJECT_NAME}_utility)
+ADD_EXECUTABLE( benchmark_all_neutral benchmark.cpp )
+SET_TARGET_PROPERTIES(benchmark_all_neutral PROPERTIES COMPILE_DEFINITIONS "ALL_NEUTRAL_OPTIMIZATION")
+TARGET_LINK_LIBRARIES(benchmark_all_neutral ${COMMON_LIBRARIES} ${PROJECT_NAME}_utility ${PROJECT_NAME}_commandline)
+
+ADD_EXECUTABLE( benchmark_selected benchmark.cpp )
+TARGET_LINK_LIBRARIES(benchmark_selected ${COMMON_LIBRARIES} ${PROJECT_NAME}_utility ${PROJECT_NAME}_commandline)
