--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -1,5 +1,7 @@
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_SRC_DIR}/tools )
 
-ADD_EXECUTABLE(performance_combiner performance_combiner.cpp)
-TARGET_LINK_LIBRARIES(performance_combiner ${COMMON_LIBRARIES} )
+#ADD_EXECUTABLE(performance_combiner performance_combiner.cpp)
+#TARGET_LINK_LIBRARIES(performance_combiner ${COMMON_LIBRARIES} )
+
+ADD_SUBDIRECTORY(log_parser)
