Formatted source; moved files from qtl example into genetic library

--- a/src/clotho/CMakeLists.txt
+++ b/src/clotho/CMakeLists.txt
@@ -1,4 +1,5 @@
 LIST( APPEND CLOTHO_DIRS utility )
+LIST( APPEND CLOTHO_DIRS genetics )
 
 FOREACH( D ${CLOTHO_DIRS} )
     ADD_SUBDIRECTORY( ${D} )
