--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,14 @@ IF( GSL_FOUND )
 ENDIF( GSL_FOUND )
 LIST( APPEND COMMON_LIBRARIES ${GSL_LIBRARIES} )
 
+FIND_PACKAGE( CUDA REQUIRED )
+MESSAGE( STATUS "CXX: " ${CMAKE_CXX_COMPILER})
+SET(CUDA_HOST_COMPILER ${CMAKE_CXX_COMPILER})
+SET(CUDA_SEPARABLE_COMPILATION ON )
+SET(CUDA_PROPAGATE_HOST_FLAGS OFF)
+#SET(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS};-gencode arch=compute_20,code=sm_20")
+
+
 SET( Gperftools_DIR "/opt/gperftools/latest" )
 find_library( TCMALLOC_LIBRARY NAMES tcmalloc PATHS ${Gperftools_DIR}/lib )
 find_library( PROFILER_LIBRARY NAMES profiler PATHS ${Gperftools_DIR}/lib )
