--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -15,3 +15,4 @@ ADD_EXECUTABLE( benchmark_selected benchmark.cpp )
 TARGET_LINK_LIBRARIES(benchmark_selected ${COMMON_LIBRARIES} ${PROJECT_NAME}_utility ${PROJECT_NAME}_commandline)
 
 ADD_SUBDIRECTORY(qtl)
+ADD_SUBDIRECTORY(cuda)
