--- a/src/examples/cuda/CMakeLists.txt
+++ b/src/examples/cuda/CMakeLists.txt
@@ -2,6 +2,5 @@ INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_SRC_DIR}/examples )
 
 
-CUDA_COMPILE(SQ square.cu)
-CUDA_ADD_EXECUTABLE(square_list square_list.cpp ${SQ} )
+CUDA_ADD_EXECUTABLE(square_list square_list.cpp square.cu square.h )
 TARGET_LINK_LIBRARIES(square_list ${CUDA_LIBRARY} cuda )
