Hardcoded g++ as compiler for CUDA code.  Clang++ was not working with c++0x

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,11 +69,13 @@ LIST( APPEND COMMON_LIBRARIES ${GSL_LIBRARIES} )
 
 FIND_PACKAGE( CUDA REQUIRED )
 MESSAGE( STATUS "CXX: " ${CMAKE_CXX_COMPILER})
-SET(CUDA_HOST_COMPILER ${CMAKE_CXX_COMPILER})
+SET(CUDA_HOST_COMPILER g++)
 SET(CUDA_SEPARABLE_COMPILATION ON )
 SET(CUDA_PROPAGATE_HOST_FLAGS OFF)
 #SET(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS};-gencode arch=compute_20,code=sm_20")
 
+MESSAGE( STATUS "CUDA LIBRARIES: " ${CUDA_LIBRARIES} )
+MESSAGE( STATUS "CUDA LIBRARIES: " ${CUDA_curand_LIBRARY} )
 
 SET( Gperftools_DIR "/opt/gperftools/latest" )
 find_library( TCMALLOC_LIBRARY NAMES tcmalloc PATHS ${Gperftools_DIR}/lib )
