--- a/src/examples/cuda/CMakeLists.txt
+++ b/src/examples/cuda/CMakeLists.txt
@@ -3,4 +3,4 @@ INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_SRC_DIR}/examples )
 
 
 CUDA_ADD_EXECUTABLE(square_list square_list.cpp square.cu square.h )
-TARGET_LINK_LIBRARIES(square_list ${CUDA_LIBRARY} cuda )
+TARGET_LINK_LIBRARIES(square_list ${CUDA_LIBRARIES} ${CUDA_curand_LIBRARY} ${COMMON_LIBRARIES} )
