--- a/src/clotho/utility/CMakeLists.txt
+++ b/src/clotho/utility/CMakeLists.txt
@@ -1,5 +1,6 @@
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_INCLUDE_DIR} )
 
 LIST( APPEND UTILITY_SRCS set_bit_node.cpp )
+LIST( APPEND UTILITY_SRCS bit_masks.cpp )
 
 ADD_LIBRARY( ${PROJECT_NAME}_utility SHARED ${UTILITY_SRCS} )
