Added library with boost python wrapped timing object

--- a/src/clotho/utility/CMakeLists.txt
+++ b/src/clotho/utility/CMakeLists.txt
@@ -4,3 +4,9 @@ LIST( APPEND UTILITY_SRCS set_bit_node.cpp )
 LIST( APPEND UTILITY_SRCS bit_masks.cpp )
 
 ADD_LIBRARY( ${PROJECT_NAME}_utility SHARED ${UTILITY_SRCS} )
+
+LIST( APPEND PYTHON_SRCS my_timer.cpp )
+
+ADD_LIBRARY( my_timer SHARED ${PYTHON_SRCS} )
+SET_TARGET_PROPERTIES( my_timer PROPERTIES COMPILE_FLAGS "-fPIC" )
+TARGET_LINK_LIBRARIES( my_timer ${Boost_LIBRARIES} )
