--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,13 @@ IF( Boost_FOUND )
     MESSAGE (STATUS "Boost Include: " ${Boost_INCLUDE_DIR} )
     MESSAGE (STATUS "Boost Library: " ${Boost_LIBRARIES} )
 ENDIF( Boost_FOUND )
-LIST( APPEND COMMON_LIBRARIES ${Boost_LIBRARIES} )
+#LIST( APPEND COMMON_LIBRARIES ${Boost_LIBRARIES} )
+
+foreach( ITEM ${Boost_LIBRARIES} )
+    if( NOT (ITEM MATCHES "(.*)python(.*)") )
+        LIST(APPEND COMMON_LIBRARIES ${ITEM})
+    endif()
+endforeach()
 
 FIND_PACKAGE( PythonLibs 2.7 REQUIRED )
 IF( PYTHONLIBS_FOUND )
