--- a/examples/qtl/CMakeLists.txt
+++ b/examples/qtl/CMakeLists.txt
@@ -1,5 +1,5 @@
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_INCLUDE_DIR} )
-INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_SRC_DIR}/examples )
+INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_EXAMPLE_DIR}/examples )
 
 ADD_EXECUTABLE( qtl_estimator qtl_estimator.cpp )
 SET_TARGET_PROPERTIES( qtl_estimator PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY" )   # binary sequence combination determined by experimentation
