--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -29,4 +29,7 @@ ADD_LIBRARY( ${PROJECT_NAME}_commandline SHARED ${SRCS} )
 
 ADD_SUBDIRECTORY(benchmark)
 ADD_SUBDIRECTORY(qtl)
+
+IF( BUILD_CUDA_EXAMPLES )
 ADD_SUBDIRECTORY(cuda)
+ENDIF( BUILD_CUDA_EXAMPLES )
