--- a/examples/qtl/CMakeLists.txt
+++ b/examples/qtl/CMakeLists.txt
@@ -16,11 +16,11 @@ INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_EXAMPLE_DIR}/examples )
 
 ADD_EXECUTABLE( qtl_estimator qtl_estimator.cpp )
 SET_TARGET_PROPERTIES( qtl_estimator PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY" )   # binary sequence combination determined by experimentation
-TARGET_LINK_LIBRARIES( qtl_estimator ${COMMON_LIBRARIES} ${PROJECT_NAME}_utility ${PROJECT_NAME}_commandline ${PROJECT_NAME}_fitmetric )
+TARGET_LINK_LIBRARIES( qtl_estimator ${COMMON_LIBRARIES} ${PROJECT_NAME}_utility ${PROJECT_NAME}_commandline ${PROJECT_NAME}_fitmetric ${PROJECT_NAME}_popgrowth )
 
 ADD_EXECUTABLE( qtl_estimator_vector qtl_estimator.cpp )
 SET_TARGET_PROPERTIES( qtl_estimator_vector PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_VECTOR_SUBSET" )
-TARGET_LINK_LIBRARIES( qtl_estimator_vector ${COMMON_LIBRARIES} ${PROJECT_NAME}_utility ${PROJECT_NAME}_commandline ${PROJECT_NAME}_fitmetric )
+TARGET_LINK_LIBRARIES( qtl_estimator_vector ${COMMON_LIBRARIES} ${PROJECT_NAME}_utility ${PROJECT_NAME}_commandline ${PROJECT_NAME}_fitmetric ${PROJECT_NAME}_popgrowth)
 
 #LIST(APPEND PROG_NAME "iterate")
 #LIST(APPEND PROG_NAME "scan")
@@ -63,4 +63,4 @@ TARGET_LINK_LIBRARIES( qtl_estimator_vector ${COMMON_LIBRARIES} ${PROJECT_NAME}_
 
 ADD_EXECUTABLE( qtl_estimator_mutrec qtl_estimator.cpp )
 SET_TARGET_PROPERTIES( qtl_estimator_mutrec PROPERTIES COMPILE_DEFINITIONS "USE_MUTATE_AND_RECOMBINE")
-TARGET_LINK_LIBRARIES( qtl_estimator_mutrec ${COMMON_LIBRARIES} ${PROJECT_NAME}_utility ${PROJECT_NAME}_commandline ${PROJECT_NAME}_fitmetric )
+TARGET_LINK_LIBRARIES( qtl_estimator_mutrec ${COMMON_LIBRARIES} ${PROJECT_NAME}_utility ${PROJECT_NAME}_commandline ${PROJECT_NAME}_fitmetric ${PROJECT_NAME}_popgrowth)
