--- a/examples/cuda/sandbox/CMakeLists.txt
+++ b/examples/cuda/sandbox/CMakeLists.txt
@@ -15,8 +15,8 @@ INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_SRC_DIR}/examples )
 
 
-CUDA_ADD_EXECUTABLE(square_list square_list.cpp square.cu cuda_mt19937.cu square_stream.cu)
-TARGET_LINK_LIBRARIES(square_list ${CUDA_LIBRARIES} ${CUDA_curand_LIBRARY} ${COMMON_LIBRARIES} )
+CUDA_ADD_EXECUTABLE(square_list square_list.cpp square.cu square_host.cu cuda_mt19937.cu square_stream.cu)
+TARGET_LINK_LIBRARIES(square_list ${CUDA_LIBRARIES} ${CUDA_curand_LIBRARY} ${COMMON_LIBRARIES} ${PROJECT_NAME}_utility )
 
 ADD_EXECUTABLE( gen_test generate_test.cpp)
 
