--- a/examples/benchmark/CMakeLists.txt
+++ b/examples/benchmark/CMakeLists.txt
@@ -20,9 +20,16 @@ INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_EXAMPLE_DIR} )
 #
 #ADD_LIBRARY( ${PROJECT_NAME}_commandline SHARED ${SRCS} )
 
+LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_utility)
+LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_commandline)
+LIST(APPEND LOCAL_LIBS ${Boost_PROGRAM_OPTIONS_LIBRARY})
+LIST(APPEND LOCAL_LIBS ${Boost_FILESYSTEM_LIBRARY})
+LIST(APPEND LOCAL_LIBS ${Boost_SYSTEM_LIBRARY})
+LIST(APPEND LOCAL_LIBS ${Boost_CHRONO_LIBRARY})
+
 ADD_EXECUTABLE( benchmark_all_neutral benchmark.cpp )
-TARGET_LINK_LIBRARIES(benchmark_all_neutral ${COMMON_LIBRARIES} ${PROJECT_NAME}_utility ${PROJECT_NAME}_commandline)
+TARGET_LINK_LIBRARIES(benchmark_all_neutral ${LOCAL_LIBS})
 
 ADD_EXECUTABLE( benchmark_selected benchmark.cpp )
 SET_TARGET_PROPERTIES(benchmark_all_neutral PROPERTIES COMPILE_DEFINITIONS "ALL_SELECTED_ALLELES")
-TARGET_LINK_LIBRARIES(benchmark_selected ${COMMON_LIBRARIES} ${PROJECT_NAME}_utility ${PROJECT_NAME}_commandline)
+TARGET_LINK_LIBRARIES(benchmark_selected ${LOCAL_LIBS})
