--- a/examples/qtl/CMakeLists.txt
+++ b/examples/qtl/CMakeLists.txt
@@ -14,13 +14,25 @@
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_EXAMPLE_DIR}/examples )
 
+SET(LOCAL_LIBS)
+
+LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_utility)
+LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_commandline)
+LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_fitmetric)
+LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_popgrowth)
+LIST(APPEND LOCAL_LIBS ${Boost_PROGRAM_OPTIONS_LIBRARY})
+LIST(APPEND LOCAL_LIBS ${Boost_FILESYSTEM_LIBRARY})
+LIST(APPEND LOCAL_LIBS ${Boost_SYSTEM_LIBRARY})
+LIST(APPEND LOCAL_LIBS ${Boost_CHRONO_LIBRARY})
+LIST(APPEND LOCAL_LIBS ${COMMON_LIBRARIES} )
+
 ADD_EXECUTABLE( qtl_estimator qtl_estimator.cpp )
-SET_TARGET_PROPERTIES( qtl_estimator PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY" )   # binary sequence combination determined by experimentation
-TARGET_LINK_LIBRARIES( qtl_estimator ${COMMON_LIBRARIES} ${PROJECT_NAME}_utility ${PROJECT_NAME}_commandline ${PROJECT_NAME}_fitmetric ${PROJECT_NAME}_popgrowth )
+SET_TARGET_PROPERTIES( qtl_estimator PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_INLINE_DYNAMIC_AND_CLASSIFY" LINK_FLAGS "-Wl,--no-as-needed" )   # binary sequence combination determined by experimentation
+TARGET_LINK_LIBRARIES( qtl_estimator ${LOCAL_LIBS} )
 
 ADD_EXECUTABLE( qtl_estimator_vector qtl_estimator.cpp )
-SET_TARGET_PROPERTIES( qtl_estimator_vector PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_VECTOR_SUBSET" )
-TARGET_LINK_LIBRARIES( qtl_estimator_vector ${COMMON_LIBRARIES} ${PROJECT_NAME}_utility ${PROJECT_NAME}_commandline ${PROJECT_NAME}_fitmetric ${PROJECT_NAME}_popgrowth)
+SET_TARGET_PROPERTIES( qtl_estimator_vector PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_VECTOR_SUBSET" LINK_FLAGS "-Wl,--no-as-needed" )
+TARGET_LINK_LIBRARIES( qtl_estimator_vector ${LOCAL_LIBS})
 
 #LIST(APPEND PROG_NAME "iterate")
 #LIST(APPEND PROG_NAME "scan")
@@ -62,9 +74,9 @@ TARGET_LINK_LIBRARIES( qtl_estimator_vector ${COMMON_LIBRARIES} ${PROJECT_NAME}_
 #ADD_CUSTOM_TARGET(test_targets DEPENDS ${TEST_TARGETS})
 
 ADD_EXECUTABLE( qtl_estimator_mutrec qtl_estimator.cpp )
-SET_TARGET_PROPERTIES( qtl_estimator_mutrec PROPERTIES COMPILE_DEFINITIONS "USE_MUTATE_AND_RECOMBINE")
-TARGET_LINK_LIBRARIES( qtl_estimator_mutrec ${COMMON_LIBRARIES} ${PROJECT_NAME}_utility ${PROJECT_NAME}_commandline ${PROJECT_NAME}_fitmetric ${PROJECT_NAME}_popgrowth)
+SET_TARGET_PROPERTIES( qtl_estimator_mutrec PROPERTIES COMPILE_DEFINITIONS "USE_MUTATE_AND_RECOMBINE" LINK_FLAGS "-Wl,--no-as-needed")
+TARGET_LINK_LIBRARIES( qtl_estimator_mutrec ${LOCAL_LIBS})
 
 ADD_EXECUTABLE( qtl_estimator_assort qtl_estimator.cpp )
-SET_TARGET_PROPERTIES( qtl_estimator_assort PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_VECTOR_SUBSET;USE_ASSORTATIVE_SELECTOR" )
-TARGET_LINK_LIBRARIES( qtl_estimator_assort ${COMMON_LIBRARIES} ${PROJECT_NAME}_utility ${PROJECT_NAME}_commandline ${PROJECT_NAME}_fitmetric ${PROJECT_NAME}_popgrowth)
+SET_TARGET_PROPERTIES( qtl_estimator_assort PROPERTIES COMPILE_DEFINITIONS "USE_BLOCK_SIZE_64;USE_VECTOR_SUBSET;USE_ASSORTATIVE_SELECTOR" LINK_FLAGS "-Wl,--no-as-needed")
+TARGET_LINK_LIBRARIES( qtl_estimator_assort ${LOCAL_LIBS})
