--- a/src/clotho/utility/CMakeLists.txt
+++ b/src/clotho/utility/CMakeLists.txt
@@ -23,4 +23,4 @@ LIST( APPEND PYTHON_SRCS my_timer.cpp )
 
 ADD_LIBRARY( my_timer SHARED ${PYTHON_SRCS} )
 SET_TARGET_PROPERTIES( my_timer PROPERTIES COMPILE_FLAGS "-fPIC" )
-TARGET_LINK_LIBRARIES( my_timer ${Boost_LIBRARIES} )
+TARGET_LINK_LIBRARIES( my_timer ${Boost_PYTHON_LIBRARY} ${Boost_CHRONO_LIBRARY} )
