--- a/src/tools/log_parser/CMakeLists.txt
+++ b/src/tools/log_parser/CMakeLists.txt
@@ -14,5 +14,11 @@
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_SRC_DIR}/tools )
 
+SET(COMMON_LIBS)
+LIST(APPEND COMMON_LIBS ${COMMON_LIBRARIES})
+LIST(APPEND COMMON_LIBS ${Boost_PROGRAM_OPTIONS_LIBRARY} )
+LIST(APPEND COMMON_LIBS ${Boost_FILESYSTEM_LIBRARY} )
+LIST(APPEND COMMON_LIBS ${Boost_SYSTEM_LIBRARY} )
+
 ADD_EXECUTABLE(log_parser log_parser.cpp)
-TARGET_LINK_LIBRARIES(log_parser ${COMMON_LIBRARIES} )
+TARGET_LINK_LIBRARIES(log_parser ${COMMON_LIBS} )
