--- a/unittest/CMakeLists.txt
+++ b/unittest/CMakeLists.txt
@@ -17,9 +17,20 @@ LIST(APPEND DIRS powerset )
 LIST(APPEND DIRS utility )
 LIST(APPEND DIRS fitness )
 
+SET(LOCAL_LIBS)
+
+LIST(APPEND LOCAL_LIBS ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
+
 FOREACH( D ${DIRS} )
     ADD_SUBDIRECTORY( ${D} )
+    LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_${D}_test)
 ENDFOREACH( D )
 
+LIST(APPEND LOCAL_LIBS ${PROJECT_NAME}_utility )
+LIST(APPEND LOCAL_LIBS ${COMMON_LIBRARIES})
+
+MESSAGE( STATUS "Unittest library list: " ${LOCAL_LIBS})
+
 ADD_EXECUTABLE(test_main test_main.cpp)
-TARGET_LINK_LIBRARIES( test_main ${COMMON_LIBRARIES} ${PROJECT_NAME}_powerset_test ${PROJECT_NAME}_utility ${PROJECT_NAME}_utility_test ${PROJECT_NAME}_fitness_test)
+SET_TARGET_PROPERTIES( test_main PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
+TARGET_LINK_LIBRARIES( test_main ${LOCAL_LIBS})
