Cleaned up link library list

--- a/examples/cuda/qtl/CMakeLists.txt
+++ b/examples/cuda/qtl/CMakeLists.txt
@@ -14,6 +14,12 @@
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${${PROJECT_NAME}_SRC_DIR}/examples )
 
+SET(LOCAL_LIBS)
+
+LIST(APPEND LOCAL_LIBS ${CUDA_cuda_LIBRARY})
+LIST(APPEND LOCAL_LIBS ${CUDA_curand_LIBRARY})
+LIST(APPEND LOCAL_LIBS ${Boost_CHRONO_LIBRARY})
+LIST(APPEND LOCAL_LIBS ${COMMON_LIBRARIES})
 
 CUDA_ADD_EXECUTABLE(qtl_cuda qtl_cuda.cpp device_properties.h device_properties.cu  page_manager.cu adjacency_matrix.cu)
-TARGET_LINK_LIBRARIES(qtl_cuda ${CUDA_LIBRARIES} ${CUDA_curand_LIBRARY} ${COMMON_LIBRARIES} )
+TARGET_LINK_LIBRARIES(qtl_cuda ${LOCAL_LIBS} )
