--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,7 +127,8 @@ IF( WITH_CUDA_EXAMPLES )
     SET(CUDA_HOST_COMPILER g++)
     SET(CUDA_SEPARABLE_COMPILATION ON )
     SET(CUDA_PROPAGATE_HOST_FLAGS OFF)
-    #SET(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS};-gencode arch=compute_20,code=sm_20")
+    #SET(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS};-gencode=arch=compute_30,code=sm_30")
+    LIST(APPEND CUDA_NVCC_FLAGS "-gencode=arch=compute_30,code=sm_30")
 
     MESSAGE( STATUS "CUDA LIBRARIES: " ${CUDA_LIBRARIES} )
     MESSAGE( STATUS "CUDA LIBRARIES: " ${CUDA_curand_LIBRARY} )
