Updated example code to evaluate performance of different compute configurations

--- a/examples/cuda/qtl_thrust/CMakeLists.txt
+++ b/examples/cuda/qtl_thrust/CMakeLists.txt
@@ -33,7 +33,11 @@ LIST(APPEND OPTIONS_SRC random_number_options.cpp)
 LIST(APPEND SIM_SRC main.cpp)
 LIST(APPEND SIM_SRC simulate_engine.cu )
 LIST(APPEND SIM_SRC crossover_matrix.cu )
+LIST(APPEND SIM_SRC population_recombiner.cu )
+LIST(APPEND SIM_SRC scatter_mutations.cu )
+LIST(APPEND SIM_SRC population_metadata.cu )
 
 CUDA_ADD_EXECUTABLE(qtl_thrust ${SIM_SRC} ${OPTIONS_SRC})
 SET_TARGET_PROPERTIES( qtl_thrust PROPERTIES LINK_FLAGS "-Wl,--no-as-needed" )
+#SET_TARGET_PROPERTIES( qtl_thrust PROPERTIES CUDA_NVCC_FLAGS "-gencode=arch=compute_30,code=sm_30" )
 TARGET_LINK_LIBRARIES(qtl_thrust ${LOCAL_LIBS} )
