Added command line options

--- a/examples/cuda/qtl_thrust/CMakeLists.txt
+++ b/examples/cuda/qtl_thrust/CMakeLists.txt
@@ -29,6 +29,9 @@ LIST(APPEND LOCAL_LIBS ${COMMON_LIBRARIES})
 
 LIST(APPEND OPTIONS_SRC qtl_thrust_general_options.cpp)
 LIST(APPEND OPTIONS_SRC random_number_options.cpp)
+LIST(APPEND OPTIONS_SRC mutation_rate_option.cpp)
+LIST(APPEND OPTIONS_SRC recombination_rate_option.cpp)
+LIST(APPEND OPTIONS_SRC population_size_option.cpp)
 
 LIST(APPEND SIM_SRC main.cpp)
 LIST(APPEND SIM_SRC simulate_engine.cu )
